--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="vi" class="scroll-smooth">
 <head>
@@ -6,6 +7,20 @@
 <title>Click AI | Workshop Solopreneur</title>
 <script src="https://cdn.tailwindcss.com"></script>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1372412783947096');
+fbq('track', 'PageView');
+</script>
+<!-- End Meta Pixel Code -->
 <script>
 tailwind.config = {
 theme: {
@@ -111,6 +126,9 @@ overflow-x: hidden;
 </script>
 </head>
 <body>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1372412783947096&ev=PageView&noscript=1"
+/></noscript>
 <div id="root"></div>
 <script type="module" src="./index.tsx"></script>
 </body>
